<resources>
    <string name="app_name">ContactsTask</string>
    <string name="contact_details">Contact Details</string>
    <string name="image">Image</string>
    <string name="contacts">Contacts</string>
    <string name="next">Next</string>
    <string name="messages">Messages</string>
    <string name="contact_list">Contact List</string>
    <string name="no_data_found">No Contact Found</string>
    <string name="first_pname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="unable_load_contact_list">Unable to load Contact List</string>
    <string name="send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="otp">OTP:-</string>
</resources>
