<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Pawan Kumar Sharma on 11/10/19 5:16 PM
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 11/10/19 5:16 PM
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.kishan.contactstask.database.Message" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp8">

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="@dimen/font_16"
                android:text="@{model.firstName}"
                tools:text="@string/first_pname" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@{model.lastName}"

                android:textSize="@dimen/font_14"
                tools:text="@string/last_name" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.phoneNumber}"
                android:fontFamily="serif"
                android:textSize="@dimen/font_14"
                android:visibility="gone"
                tools:text="@string/phone_number" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_otp"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/otp)+``+model.otp}"
                    android:fontFamily="serif"
                    android:textSize="@dimen/font_14"
                    tools:text="Otp" />

                <TextView
                    android:id="@+id/tv_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_weight="0.5"
                    app:bindServerDate="@{model.dataTime}"
                    android:fontFamily="serif"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_10"
                    tools:text="date" />
            </LinearLayout>
            



            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</layout>